[Posts] Moved first post in tech category

--- a/_posts/tech/2016-02-17-hello.md
+++ b/_posts/tech/2016-02-17-hello.md
@@ -1,7 +1,7 @@
 ---
 layout: post
-category: other
 title: Hello
+categories: ["tech"]
 description: Setting up a new GitHub Pages-powered Jekyll site
 date: 2016-02-17 10:41:00 +0100
 ---
