[URL format] Redirects to new post URLs

--- a/_posts/tech/2016-02-17-hello.md
+++ b/_posts/tech/2016-02-17-hello.md
@@ -4,6 +4,7 @@ title: Hello
 categories: ["tech"]
 description: Setting up a new GitHub Pages-powered Jekyll site
 date: 2016-02-17 10:41:00 +0100
+redirect_from: ["/tech/2016/02/17/hello/", "/tech/2016/02/17/hello"]
 ---
 
 Hello,
